# aeroTasks

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/superpowers/acceptance/: 2026-06-18-methodology-pipeline.md
docs/superpowers/plans/: 2026-06-18-methodology-pipeline-plan.md
docs/superpowers/specs/: 2026-06-18-methodology-pipeline-design.md  2026-06-18-ticktick-clone-ui-design.md
scripts/: gen-icon.mjs
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ColumnManagerModal.tsx  DetailPanel.tsx  DoPomodoro.tsx  PlanLineup.tsx  ReflectStats.tsx  Sidebar.tsx  TaskItem.tsx  TaskList.tsx  TriageKanban.tsx  icons.tsx
src/data/: mock.ts
