[package]
name = "aerotasks"
version = "0.1.0"
description = "aeroTasks — a high-performance cross-platform task manager"
authors = ["aeroTasks"]
edition = "2021"
rust-version = "1.77.2"

# The library that the desktop entrypoint and (future) mobile targets share.
[lib]
name = "aerotasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optimize the release binary for size + speed (small, fast desktop app).
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
